--- a/laco.html
+++ b/laco.html
@@ -42,7 +42,7 @@
 <body>
     <input type="number" id="numero" placeholder="Digite um número">
     <br>
-    <button onclick="tabuada()">Clique aqui!!</button>
+    <button onclick="somar()">Clique aqui!!</button>
     <br>
     <div id="resultado"></div>
 
